--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <div>Teachable Machine Image Model</div>
-<input id="trainedModel" type="text" size="80" onfocusout="update()" value="https://teachablemachine.withgoogle.com/models/08-Tt85Vr/"><br>
+<input id="trainedModel" type="text" size="80" onfocusout="update()" value="https://teachablemachine.withgoogle.com/models/XcVOP2lSx/"><br>
 <input id="refresh" type="text" size="3" onfocusout="update()" value="1000"> ms<br>
 <input id="topic" type="text" size="15" onfocusout="update()" value="topicName"><br>
 <button type="button" onclick="init()">Start</button>
